--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
 
 ShootingGame/results.dat
+BlackJack/bin/Debug/net7.0/BlackJack.deps.json
+BlackJack/bin/Debug/net7.0/BlackJack.dll
+BlackJack/bin/Debug/net7.0/BlackJack.exe
+BlackJack/bin/Debug/net7.0/BlackJack.pdb
+BlackJack/bin/Debug/net7.0/BlackJack.runtimeconfig.json
+BlackJack/BlackJack.csproj
+BlackJack/obj/BlackJack.csproj.nuget.dgspec.json
+BlackJack/obj/BlackJack.csproj.nuget.g.props
+BlackJack/obj/BlackJack.csproj.nuget.g.targets
+BlackJack/obj/Debug/net7.0/.NETCoreApp,Version=v7.0.AssemblyAttributes.cs
+BlackJack/obj/Debug/net7.0/apphost.exe
+BlackJack/obj/Debug/net7.0/BlackJack.AssemblyInfo.cs
+BlackJack/obj/Debug/net7.0/BlackJack.AssemblyInfoInputs.cache
+BlackJack/obj/Debug/net7.0/BlackJack.assets.cache
+BlackJack/obj/Debug/net7.0/BlackJack.csproj.AssemblyReference.cache
+BlackJack/obj/Debug/net7.0/BlackJack.csproj.CoreCompileInputs.cache
+BlackJack/obj/Debug/net7.0/BlackJack.csproj.FileListAbsolute.txt
+BlackJack/obj/Debug/net7.0/BlackJack.dll
+BlackJack/obj/Debug/net7.0/BlackJack.GeneratedMSBuildEditorConfig.editorconfig
+BlackJack/obj/Debug/net7.0/BlackJack.genruntimeconfig.cache
+BlackJack/obj/Debug/net7.0/BlackJack.GlobalUsings.g.cs
+BlackJack/obj/Debug/net7.0/BlackJack.pdb
+BlackJack/obj/Debug/net7.0/ref/BlackJack.dll
+BlackJack/obj/Debug/net7.0/refint/BlackJack.dll
+BlackJack/obj/project.assets.json
+BlackJack/obj/project.nuget.cache
+ShootingGame/__pycache__/plotGraph.cpython-311.pyc
